# sascha-markdown

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE.md  README.md  build.rs  com.sascha.SFMDE.desktop
.github/: FUNDING.yml
.github/workflows/: release.yml
res/: default.css  default.toml  resources.gresource  resources.gresource.xml  smd.xml
src/: config.rs  main.rs  parser.rs
src/ui/: app.rs  markup.rs  mod.rs  settings.rs  toolbar.rs
tests/: cmark_options.rs  cmark_tagend.rs  config_parsing_tests.rs  debug_parser.rs  gtk_img_markup.rs  parser_tests.rs  test_ext.rs
